salesforce/force-app/main/default/objects/Salesforce_Expert__c/Salesforce_Expert__c.object-meta.xml
<CustomObject>
    <description>An expert who applied through the support platform. Synced from the app.</description>
    <label>Salesforce Expert</label>
    <nameField>
        <label>Expert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Experts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>