salesforce/force-app/main/default/objects/Salesforce_Expert__c/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <label>Certifications</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>