salesforce/force-app/main/default/objects/Salesforce_Expert__c/fields/GitHub_URL__c.field-meta.xml
<CustomField>
    <fullName>GitHub_URL__c</fullName>
    <label>GitHub</label>
    <type>Url</type>
</CustomField>