salesforce/force-app/main/default/objects/Salesforce_Expert__c/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>