salesforce/force-app/main/default/objects/Salesforce_Expert__c/fields/Platform_Expert_Id__c.field-meta.xml
<CustomField>
    <fullName>Platform_Expert_Id__c</fullName>
    <externalId>true</externalId>
    <label>Platform Expert Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>