salesforce/force-app/main/default/objects/Salesforce_Expert__c/fields/Professional_Summary__c.field-meta.xml
<CustomField>
    <fullName>Professional_Summary__c</fullName>
    <label>Professional Summary</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>