salesforce/force-app/main/default/objects/Salesforce_Expert__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Declared Skills</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>