salesforce/force-app/main/default/objects/Salesforce_Expert__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <length>64</length>
    <type>Text</type>
</CustomField>